Add wiste sise to weight and updated DB.

--- a/HomeApps/Web.config
+++ b/HomeApps/Web.config
@@ -11,7 +11,8 @@
   </configSections>
   <configBuilders>
     <builders>
-    <add name="Secrets" userSecretsId="2b092e16-e84f-42ad-82a4-5c23f7236ead" type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" /></builders>
+      <add name="Secrets" userSecretsId="2b092e16-e84f-42ad-82a4-5c23f7236ead" type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    </builders>
   </configBuilders>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -30,7 +31,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.7.2" />
-	  <customErrors mode="Off" />
+    <customErrors mode="Off" />
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -55,7 +56,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-	  <add name="HomeAppsEntities" connectionString="metadata=res://*/HomeApps.csdl|res://*/HomeApps.ssdl|res://*/HomeApps.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LocalHost\SQLEXPRESS;initial catalog=HomeApps;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HomeAppsEntities" connectionString="metadata=res://*/HomeApps.csdl|res://*/HomeApps.ssdl|res://*/HomeApps.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=changeisbad\sqlexpress;initial catalog=HomeApps;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
