--- a/HomeApps/packages.config
+++ b/HomeApps/packages.config
@@ -10,20 +10,17 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
-  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net48" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.Base" version="3.0.0" targetFramework="net48" />
   <package id="Microsoft.Configuration.ConfigurationBuilders.UserSecrets" version="3.0.0" targetFramework="net48" />
-  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="NuGet.Frameworks" version="6.6.1" targetFramework="net48" />
   <package id="popper.js" version="1.16.1" targetFramework="net48" />
   <package id="StyleCop" version="6.2.0" targetFramework="net472" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net472" developmentDependency="true" />
   <package id="System.Collections" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
-  <package id="Unity" version="5.11.10" targetFramework="net48" />
-  <package id="Unity.Mvc4" version="1.6.0.0" targetFramework="net472" />
 </packages>
